--- a/package.json
+++ b/package.json
@@ -6,16 +6,19 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tinymce/tinymce-react": "^4.3.0",
     "firebase": "^10.6.0",
     "gsap": "^3.12.2",
     "i18next-browser-languagedetector": "^7.2.0",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-i18next": "^13.4.1",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "tailwind-scrollbar": "^3.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
