--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tinymce/tinymce-react": "^4.3.0",
+    "file-saver": "^2.0.5",
     "firebase": "^10.6.0",
     "gsap": "^3.12.2",
     "i18next-browser-languagedetector": "^7.2.0",
